...
  <string name="audio_language_select_dialog_okay_button" tools:ignore="ButtonCase,Typos">Ok</string>
  <string name="audio_language_select_dialog_cancel_button">Cancel</string>
  <string name="audio_language_select_dialog_title">Audio Language</string>
  <string name="audio_dialog_offline_title">Currently Offline</string>
  <string name="audio_dialog_offline_message">Make sure Wi-Fi or cellular data is turned on, then try again.</string>
  <string name="audio_dialog_offline_positive" tools:ignore="ButtonCase,Typos">Ok</string>
  <string name="cellular_data_alert_dialog_okay_button" tools:ignore="ButtonCase,Typos">Ok</string>
  <string name="cellular_data_alert_dialog_cancel_button">Cancel</string>
  <string name="cellular_data_alert_dialog_title">Currently on Cellular Data</string>
  <string name="cellular_data_alert_dialog_description">Streaming audio may use a lot of cellular data.</string>
  <string name="cellular_data_alert_dialog_checkbox">Don\'t show this message again</string>
  <string name="concept_card_toolbar_title">Concept Card</string>
  <string name="concept_card_one_button_text">Concept Card 1</string>
  <string name="concept_card_two_button_text">Concept Card 2</string>
  <string name="revision_card_toolbar_title">Study Guide</string>
...
